kubernetes/apps/kube-system/cilium/gateway/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname swarm.marcocondrache.com
spec:
  gatewayClassName: cilium-internal
  infrastructure:
    annotations:
      tailscale.com/hostname: "hive-gateway"
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.s.marcocondrache.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: hive-marcocondrache-com-tls
